--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/main.css">
-    <title>TerrorFlix</title>
+    <link rel="stylesheet" href="../style/main.css">
+
+    <!--Responsividade-->
+    <link rel="stylesheet" href="../style/responsive.css">
+
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
+    <title>LoadingFlix</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">TerrorFlix</h2>
+            <h2 class="logo">LoadingFlix</h2>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
@@ -24,7 +32,8 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="título">Invocação do Mal </h3>
+                <h3 class="título">Invocação do Mal</h3>
+                
                 <p class="descricao">Harrisville, Rhode Island, Estados Unidos, 1968. Os investigadores paranormais Ed e Lorraine Warren trabalham para ajudar uma família aterrorizada por uma presença sombria em sua fazenda. Forçados a confrontar uma entidade poderosa, os Warrens se vêem presos no caso mais aterrorizante de suas vidas. Baseado numa história real.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
@@ -40,7 +49,47 @@
         </div>    
     </main>
 
-    <script src="https://kit.fontawesome.com/2d8ab7b4c5.js" crossorigin="anonymous"></script>
+    <div class="carrousel-filmes">
+        <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <img src="img/mini1.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini3.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini4.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini5.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini6.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini7.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini8.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini9.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/mini10.jpg" alt="">
+                </div>
 
+        </div>
+
+    </div>
+
+
+    <script src="https://kit.fontawesome.com/2d8ab7b4c5.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
 </html>
